--- a/app/views/carts/empty.html.erb
+++ b/app/views/carts/empty.html.erb
@@ -1,11 +1,7 @@
 <section class="orders-show">
 
-  <header class="page-header">
-    <h1>Order <%= @order.id %></h1>
-  </header>
-
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h4>Your cart is empty!</h4>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
