--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,14 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if cart.length == 0 %>
+  <h4>Your cart is empty!</h4>
+  <br>
+  <%= link_to "Start Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+<% else %>
+  
+
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +56,5 @@
       <% end %>
     </div>
   </div>
-
+  <% end %>
 </section>
