--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,12 +11,21 @@
       <div class="quantity">
         <span><%= @product.quantity %> in stock at </span>
         <span><%= humanized_money_with_symbol @product.price %></span>
+       
+
       </div>
+      <% if @product.quantity == 0 %>
+      <div class="soldout"> 
+        Out of stock
+        </div>
+        
+        <% else %>
       <div class="price">          
         <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn' , method: :post do %>
           <%= fa_icon "shopping-cart", text: 'Add' %>
         <% end %>          
       </div>
+      <% end %>
     </div>
   </article>
 
