--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,6 +2,10 @@
 
   <header class="page-header">
     <h1>Order <%= @order.id %></h1>
+    <h1>OrderE <%= @order.email %></h1>
+    <h1>OrderT <%= @order.total_cents %></h1>
+    <%=p @order %>
+
   </header>
 
   <div class="order-summary jumbotron">
