order details works

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,6 +9,7 @@
   <div class="order-summary jumbotron">
     <h4>Thank you for your order <%= @order.email %>!</h4>
     <%= p @order.line_items %>
+    
 
     <div class="panel panel-default items">
     <table class="table table-bordered">
@@ -21,9 +22,9 @@
         </tr>
       </thead>
       <tbody>
-        <% @order.line_items.each do |item| %>
+        <% @order.line_items.each do |item| p item %>
           
-          <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
+          <%= render 'item', item: item %>
         <% end %>
       </tbody>
       <tfoot>
