--- a/app/views/orders/_item.html.erb
+++ b/app/views/orders/_item.html.erb
@@ -1,17 +1,22 @@
 <tr>
   <td>
-    <%= image_tag product.image.tiny.url %>
+    <%= image_tag item.product.image.tiny.url %>
   </td>
   <td>
-    <h4><%= product.name %></h4>
+    <h4><%= item.product.name %></h4>
     <br>
-    <p><%= product.description %></p>
+    <p><%= item.product.description %></p>
   </td>
   <td>
-    <%= humanized_money_with_symbol product.price %>
+    <%= humanized_money_with_symbol item.product.price %>
   </td>
   <td>
-   
+    
+    <%= item.quantity %>
+    
+    
   </td>
- 
+  <td>
+    <%= humanized_money_with_symbol item.product.price * item.quantity %>
+  </td>
 </tr>
