dashboard with link to products

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+<div class="page-header">
+<span>All categories</span>
+      <a href="/admin/categories"><%= @category.length %></a>
+    
+      </div>
+
+      <div>
+    
+      <span>All products</span>
+      <a href="/admin/products"><%= @product.length %></a>
+  
+
+</div>
