--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -20,6 +20,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <%# <li class="nav-item dropdown">
@@ -43,6 +44,9 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+      <%= link_to 'About us', :about_index %>
+      </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
