--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -35,18 +35,20 @@
             <%# Categories %>
           <%# </a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown"> %>
-            <% Category.all.each do |category| %>
+           
+          <% Category.all.each do |category| %>
             <li class="nav-item">
               <%= link_to category.name, category, class: "nav-link" %>
             </li>
             <% end %>
+            <li class="nav-item">
+          <%= link_to 'AboutUs', :about_index, class: "nav-link" %>
+          </li> 
           <%# </ul>
         </li> %>
       </ul>
       <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-      <%= link_to 'About us', :about_index %>
-      </li>
+     
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
