--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,4 +1,4 @@
-# <section class="admin-products-new">
+<section class="admin-products-new">
 
 #   <header class="page-header">
 #     <h1>Admin &raquo; New Product</h1>
@@ -60,4 +60,4 @@
 #     </div>
 #   </div>
 
-# </section>
+</section>
