--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,16 +1,27 @@
+<section class="admin-products-index">
 
+  <header class="page-header">
+    <h1>Admin &raquo; All Products</h1>
+  </header>
 
-<section class="admin-categories">
+  <div class="well">
+    <%= link_to '+ New Product', [:new, :admin, :product], class: 'btn btn-info' %>
+  </div>
 
-<header class="page-header">
-<h1>
-  <%= @category.name %>
-  <small>(<%= pluralize @products.size, 'product' %>)</small>
-</h1>
-</header>
+  <div class="panel panel-default products">
 
-<div class="products">
-<%= render @products %>
-</div>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Category</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render @categories %>
+      </tbody>
+    </table>
+
+  </div>
 
 </section>
