add date created to category

--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -8,6 +8,9 @@
  
   
   <td>
+  <%= p category.created_at %>
+  </td>
+  <td>
     <%= link_to fa_icon('link'), [:admin, category], class: 'btn btn-confirm', method: :get %>
   </td>
 </tr>
