--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -15,7 +15,7 @@
         <tr>
           <th>Category</th>
           <th>Date Created</th>
-          <th></th>
+          <th>Link</th>
         </tr>
       </thead>
       <tbody>
