sugnup doesn work change to user/new with rails5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,21 @@
 
   <main class="container">
 
-  <% if current_user %>
-  Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
-<% else %>
-  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-<% end %>
+#   <% if current_user %>
+#   Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+# <% else %>
+#   <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+# <% end %>
 
+
+<% if notice %>
+      	    <%= notice %>
+	<% end %>
+	
+	<% if alert %>
+      	    <%= alert %>
+	<% end %>
+  
 <%= yield %>
     
   </main>
