--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,14 @@
 
   <main class="container">
 
-#   <% if current_user %>
-#   Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
-# <% else %>
-#   <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-# <% end %>
+  <% if current_user %>
+      <!-- current_user will return true if a user is logged in -->
+      <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Home', root_path %> | <%= link_to 'Log Out', logout_path, method: :delete %>
+    <% else %>
+      <!-- not logged in -->
+      <%= link_to 'Home', root_path %> | <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
+    <% end %>
+    <hr>
 
 
 <% if notice %>
@@ -30,7 +33,7 @@
 	<% if alert %>
       	    <%= alert %>
 	<% end %>
-  
+
 <%= yield %>
     
   </main>
