--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -42,7 +42,7 @@
         <%= form.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
-      <%= form.submit 'Submit', class: 'btn btn-primary' %>
+      <%= form.submit 'Submit', id: 'registerButton', class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
