--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -50,7 +50,7 @@
           data-name="Jungle"
           data-description="Khurram Virani's Jungle Order"
           data-locale="auto"
-          data-email="kvirani@gmail.com"
+          data-email="yourmail@gmail.com"
           data-currency="cad">
         </script>
       <% end %>
